[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "msmart-ng"
description = "A Python library for local control of Midea (and associated brands) smart air conditioners."
readme = "README.md"
authors = [
  {name = "Tucker Kern", email = "tuckkern@gmail.com"},
]
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Home Automation"
]
dependencies = [
  "pycryptodome",
  "httpx"
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/mill1000/midea-msmart"
Issues = "https://github.com/mill1000/midea-msmart/issues"

[project.scripts]
midea-discover = "msmart.cli:main"

[tool.setuptools_scm]